<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivityFragments.loginGetNameFragment.LoginGetNameFragment">

    <TextView
        android:id="@+id/loginGetNameErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getNameEditText" />

    <EditText
        android:id="@+id/getNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/get_first_name_edit_text_hint"
        android:importantForAutofill="no"
        android:autofillHints="name"
        android:inputType="text"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:textSize="@dimen/login_edit_text_values_generic_size"
        app:layout_constraintBottom_toTopOf="@+id/getNameContinueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginGetNameTitleTextView" />

    <TextView
        android:id="@+id/loginGetNameTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_first_name_title"
        android:textSize="@dimen/login_edit_text_values_generic_size"
        app:layout_constraintBottom_toTopOf="@+id/getNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/loginGetNameProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/progress_bar_width"
        android:layout_height="@dimen/progress_bar_height"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/getNameContinueButton"
        android:text="@string/Continue"
        style="@style/initial_login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getNameEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>