...
    <fragment
        android:id="@+id/loginGetNameFragment"
        android:name="site.letsgoapp.letsgo.loginActivityFragments.loginGetNameFragment.LoginGetNameFragment"
        tools:layout="@layout/fragment_login_get_name">
        <action
            android:id="@+id/action_loginGetNameFragment_to_loginGetGenderFragment"
            app:destination="@id/loginGetGenderFragment" />
        <action
            android:id="@+id/action_loginGetNameFragment_to_loginGetGenderFragment_pop_back_stack"
            app:destination="@id/loginGetGenderFragment"
            app:popUpTo="@id/loginGetNameFragment"
            app:popUpToInclusive="true"/>
    </fragment>
...
