...
    <string name="get_birthday_invalid_birthday">Invalid birthday please try again.</string>
    <string name="get_birthday_title">Enter Birthday</string>
    <string name="get_birthday_date">MM/DD/YYYY</string>

    <!-- Login Get First Name -->
    <string name="get_first_name_connection_error">@string/general_connection_error</string>
    <string name="get_first_name_invalid_name">Invalid name please try again.</string>
    <string name="get_first_name_edit_text_hint">First Name</string>
    <string name="get_first_name_title">Enter First Name</string>

    <!-- Login Get Gender -->
    <string name="get_gender_connection_error">@string/general_connection_error</string>
    <string name="get_gender_invalid_gender">Invalid input please try again.</string>
...
